Handle backgrounds in unsupported browsers

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
           <div class="controls">
             <div id="camera-selector" class="media-select"></div>
             <div id="mic-selector" class="media-select"></div>
-            <div id="video-effects">
+            <div id="video-effects" hidden>
               <h3>Video effect</h3>
               <input
                 type="radio"
