Adds noise cancellation

--- a/client/index.html
+++ b/client/index.html
@@ -74,6 +74,7 @@
         </div>
         <div id="chat-controls">
           <button id="mute-button">Mute</button>
+          <button id="noise-cancellation">Disable noise cancellation</button>
           <button id="disconnect-button">Disconnect</button>
         </div>
       </div>
@@ -84,6 +85,7 @@
         Built with 📹 by <a href="https://twitter.com/philnash">philnash</a>
       </p>
     </footer>
+    <script src="/video/twilio-video.min.js"></script>
     <script src="./video.js" type="module"></script>
   </body>
 </html>
